--- a/src/index.css
+++ b/src/index.css
@@ -5,12 +5,16 @@ html {
 
 body {
   margin: 0;
-  padding: 40px 80px;
+  padding: 20px 40px;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  @media (min-width: 1028px) {
+    padding: 40px 80px;
+  }
 }
 
 code {
@@ -22,29 +26,26 @@ code {
   max-width: 100%;
   position: relative;
   margin: auto;
+  border: 10px solid #000;
+  border-radius: 10px;
 }
 
 .each-slide {
   width: 100%;
-  max-height: 150px;
-  position: relative;
+  height: 100%;
+  max-height: 1000px;
   display: flex;
-  align-items: top;
-  justify-content: center;
-  overflow: hidden;
-
-  /* Responsive styling */
-  @media (min-width: 768px) {
-    max-height: 400px;
-  }
-
-  @media (min-width: 1024px) {
-    max-height: 750px;
-  }
+  object-fit: cover;
 }
 
-.each-slide img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;  
+.react-slideshow-container .nav.default-nav {
+  width: 30px;
+  height: 30px;
+  margin: 10px;
+
+  @media (min-width: 1028px) {
+    width: 50px;
+    height: 50px;
+    margin: 20px;
+  }
 }
