--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@ html {
 
 body {
   margin: 0;
-  padding: 20px 40px;
+  padding: 0 20px 10px;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -13,7 +13,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
 
   @media (min-width: 1028px) {
-    padding: 40px 80px;
+    padding: 0 60px 30px;
   }
 }
 
